# databricks-sql-cli

./: .gitignore  LICENSE  NOTICE  README.md  app.py  app.spec  changelog.md  pyproject.toml
.github/workflows/: code-quality-checks.yml  publish-test.yml  publish.yml  pytest.yml  version.yml
dbsqlcli/: athenaclirc  clibuffer.py  clistyle.py  clitoolbar.py  compat.py  completer.py  completion_refresher.py  config.py  dbsqlclirc  key_bindings.py  lexer.py  main.py  sqlexecute.py
test/: test_cli.py  test_completer.py  test_completion_engine.py  test_completion_refresher.py  test_dbspecial.py  test_format_utils.py  test_naive_completion.py  test_parseutils.py  test_prompt_utils.py  test_sqlexecute.py
