[tool.poetry]
name = "dbsqlcli"
version = "0.1.1"
description = "A DBCLI client for Databricks SQL"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Pygments = "^2.11.2"
prompt-toolkit = "^3.0.29"
sqlparse = "^0.4.2"
configobj = "^5.0.6"
cli-helpers = "^2.2.1"
databricks-sql-connector = "^2.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
